# Viola-Jones-cpp

./: .haar.cpp.swp  Beatles_320x212.pgm  CMakeLists.txt  Face (3rd copy).pgm  Face (another copy).pgm  Face1.pgm  Face_26x34 (copy).pgm  Face_320x240.pgm  Face_640x313.pgm  Makefile  Output.pgm  face_50.pgm  haar.cpp  haar.h  haar2.cpp  image.c  main.cpp  vj  vj_cpp.cbp  vj_cpp.cscope_file_list  vj_cpp.depend  vj_cpp.layout
